--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,10 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.5</version>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.5</version>
-            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
@@ -67,6 +65,9 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
+                        <configuration>
+                            <mainClass>org.ogray.sui.samples.Wallet</mainClass>
+                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
